--- a/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F6a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -40,7 +40,7 @@
                                             <rect key="frame" x="15" y="0.0" width="270" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
                                     </subviews>
@@ -76,10 +76,10 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jml-tT-4WF">
-                                <rect key="frame" x="73" y="186" width="173" height="30"/>
+                                <rect key="frame" x="73" y="224" width="173" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="BMs-mM-eOV"/>
-                                    <constraint firstAttribute="width" constant="173" id="y0r-Jg-3i7"/>
+                                    <constraint firstAttribute="height" constant="30" id="K8j-1U-rRi"/>
+                                    <constraint firstAttribute="width" constant="173" id="tKL-VD-e2B"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Unregister">
@@ -90,10 +90,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8pT-MF-HKj">
-                                <rect key="frame" x="73" y="224" width="173" height="30"/>
+                                <rect key="frame" x="73" y="262" width="173" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="173" id="1ZD-Q5-HAu"/>
-                                    <constraint firstAttribute="height" constant="30" id="dGr-b5-fS3"/>
+                                    <constraint firstAttribute="height" constant="30" id="DD3-pO-WCN"/>
+                                    <constraint firstAttribute="width" constant="173" id="KTb-Hq-hbQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Send Custom Id">
@@ -106,8 +106,8 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vry-mK-TIc">
                                 <rect key="frame" x="73" y="72" width="173" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="WmN-Oh-KHx"/>
-                                    <constraint firstAttribute="width" constant="173" id="gZn-ee-eCh"/>
+                                    <constraint firstAttribute="width" constant="173" id="5eE-XM-UJz"/>
+                                    <constraint firstAttribute="height" constant="30" id="xX9-RK-9Kj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Send Event">
@@ -117,11 +117,25 @@
                                     <action selector="sendEvent:" destination="21" eventType="touchUpInside" id="jok-je-HFw"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e4W-zT-RgQ">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhh-mk-G6Z">
                                 <rect key="frame" x="73" y="110" width="173" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="173" id="Yza-Eq-sF3"/>
-                                    <constraint firstAttribute="height" constant="30" id="gip-on-O9g"/>
+                                    <constraint firstAttribute="width" constant="173" id="8Cs-0P-qPo"/>
+                                    <constraint firstAttribute="height" constant="30" id="Lx9-kS-e0P"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="End Event">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="endEvent:" destination="21" eventType="touchUpInside" id="1dD-4y-kVY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e4W-zT-RgQ">
+                                <rect key="frame" x="73" y="148" width="173" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="8Mj-y0-O8U"/>
+                                    <constraint firstAttribute="width" constant="173" id="ikQ-Zh-14c"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Get Notification History">
@@ -132,10 +146,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEU-g7-ae7">
-                                <rect key="frame" x="73" y="148" width="173" height="30"/>
+                                <rect key="frame" x="73" y="186" width="173" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="gNg-h0-Ctb"/>
-                                    <constraint firstAttribute="width" constant="173" id="sib-g5-lrf"/>
+                                    <constraint firstAttribute="width" constant="173" id="S3X-5Z-gGq"/>
+                                    <constraint firstAttribute="height" constant="30" id="qjO-PI-5PE"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Send Location">
@@ -148,20 +162,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Jml-tT-4WF" firstAttribute="top" secondItem="MEU-g7-ae7" secondAttribute="bottom" constant="8" symbolic="YES" id="0Ds-Nv-1Uf"/>
-                            <constraint firstItem="e4W-zT-RgQ" firstAttribute="trailing" secondItem="vry-mK-TIc" secondAttribute="trailing" id="3c4-uh-MVi"/>
-                            <constraint firstItem="MEU-g7-ae7" firstAttribute="trailing" secondItem="e4W-zT-RgQ" secondAttribute="trailing" id="42X-Lu-mr5"/>
-                            <constraint firstItem="8pT-MF-HKj" firstAttribute="centerX" secondItem="22" secondAttribute="centerX" id="47q-z9-tSX"/>
-                            <constraint firstItem="MEU-g7-ae7" firstAttribute="top" secondItem="e4W-zT-RgQ" secondAttribute="bottom" constant="8" symbolic="YES" id="5gL-4a-aPB"/>
-                            <constraint firstItem="Jml-tT-4WF" firstAttribute="leading" secondItem="8pT-MF-HKj" secondAttribute="leading" id="Boh-aA-nm5"/>
-                            <constraint firstItem="e4W-zT-RgQ" firstAttribute="top" secondItem="vry-mK-TIc" secondAttribute="bottom" constant="8" id="CRb-EV-RQ1"/>
-                            <constraint firstItem="Jml-tT-4WF" firstAttribute="trailing" secondItem="MEU-g7-ae7" secondAttribute="trailing" id="Dpr-AB-rNZ"/>
-                            <constraint firstItem="MEU-g7-ae7" firstAttribute="leading" secondItem="e4W-zT-RgQ" secondAttribute="leading" id="E6Y-YO-EIu"/>
-                            <constraint firstItem="8pT-MF-HKj" firstAttribute="top" secondItem="Jml-tT-4WF" secondAttribute="bottom" constant="8" symbolic="YES" id="KsS-5x-3Vq"/>
-                            <constraint firstItem="e4W-zT-RgQ" firstAttribute="leading" secondItem="vry-mK-TIc" secondAttribute="leading" id="LMs-j8-CRP"/>
-                            <constraint firstItem="Jml-tT-4WF" firstAttribute="leading" secondItem="MEU-g7-ae7" secondAttribute="leading" id="OpQ-89-BAQ"/>
-                            <constraint firstItem="8pT-MF-HKj" firstAttribute="trailing" secondItem="Jml-tT-4WF" secondAttribute="trailing" id="ZZp-dg-qKX"/>
-                            <constraint firstItem="vry-mK-TIc" firstAttribute="top" secondItem="22" secondAttribute="top" constant="72" id="alz-l2-e9o"/>
+                            <constraint firstItem="Jml-tT-4WF" firstAttribute="top" secondItem="MEU-g7-ae7" secondAttribute="bottom" constant="8" id="Egc-Fp-vVD"/>
+                            <constraint firstAttribute="centerX" secondItem="Jml-tT-4WF" secondAttribute="centerX" id="IhC-hO-nuZ"/>
+                            <constraint firstAttribute="centerX" secondItem="vry-mK-TIc" secondAttribute="centerX" id="KEy-ST-mhS"/>
+                            <constraint firstAttribute="centerX" secondItem="MEU-g7-ae7" secondAttribute="centerX" id="OQ6-eD-5xr"/>
+                            <constraint firstItem="MEU-g7-ae7" firstAttribute="top" secondItem="e4W-zT-RgQ" secondAttribute="bottom" constant="8" id="X7w-fm-ZTf"/>
+                            <constraint firstAttribute="centerX" secondItem="hhh-mk-G6Z" secondAttribute="centerX" id="bqN-QL-3uF"/>
+                            <constraint firstItem="e4W-zT-RgQ" firstAttribute="top" secondItem="hhh-mk-G6Z" secondAttribute="bottom" constant="8" id="c4y-fQ-gNO"/>
+                            <constraint firstItem="8pT-MF-HKj" firstAttribute="top" secondItem="Jml-tT-4WF" secondAttribute="bottom" constant="8" id="gv8-B6-MIj"/>
+                            <constraint firstAttribute="centerX" secondItem="e4W-zT-RgQ" secondAttribute="centerX" id="kcF-SV-vzS"/>
+                            <constraint firstItem="hhh-mk-G6Z" firstAttribute="top" secondItem="vry-mK-TIc" secondAttribute="bottom" constant="8" id="m21-eg-6n6"/>
+                            <constraint firstAttribute="centerX" secondItem="8pT-MF-HKj" secondAttribute="centerX" id="pti-kc-9xO"/>
+                            <constraint firstItem="vry-mK-TIc" firstAttribute="top" secondItem="EW5-KJ-lgk" secondAttribute="bottom" constant="8" id="rBg-Fg-Z0A"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Detail" id="26"/>
@@ -171,9 +183,4 @@
             <point key="canvasLocation" x="902" y="64"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
